# Simple_TG_bot_exchange_rate

./: .env.example  README.md  functions.py  main.py  pyproject.toml
